fix: required fields in post and put req
